fixes #317 and overflow-x on FF

--- a/www/src/styles/globals.css
+++ b/www/src/styles/globals.css
@@ -709,3 +709,7 @@ html {
     font 7s step-end infinite,
     movement 8s step-end infinite;
 }
+
+.xterm-viewport {
+  scrollbar-width: none;
+}
